[fix] fix two scrollbar show when result shows - 결과창이 나타나 body가 길어질 경우, 예제와 body의 스크롤바가 나타나는것 수정   example이 보일 경우 스크롤은 탑 고정, body의 스크롤바 disable   example을 닫을 경우 body의 스크롤바 enable

--- a/src/main/resources/static/css/app/basic.css
+++ b/src/main/resources/static/css/app/basic.css
@@ -181,6 +181,9 @@ h2 {
 .display-flex{
     display: flex;
 }
+.disable-scroll{
+    overflow: hidden;
+}
 .example-container{
     position: absolute;
     overflow-y: scroll;
@@ -203,6 +206,7 @@ h2 {
 }
 .example-content{
     background-color: #f8f8fa;
+    /*height: 100%;*/
     padding: 20px 40px;
 }
 .example-header{
